fixing content overflow

--- a/dev/scss/site/our-work.scss
+++ b/dev/scss/site/our-work.scss
@@ -3,7 +3,6 @@
     background-position: center;
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    width: 100vw;
     height: 53.333vw;
 
     .content {
@@ -12,6 +11,7 @@
 
         .swag-btn {
             background-color: #00bfff;
+            display: inline-block;
         }
     }
 
